fix alignment for container class

--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ body {
 
 .container {
   max-width: 1440px;
+  margin: auto;
 }
 
 header.hero {
